added login page & app

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Politics For Dummies</title>
 
-	<link rel="stylesheet" type="text/css" href="./css/login.css"/>
+	<link rel="stylesheet" type="text/css" href="css/login.css"/>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -16,7 +16,7 @@
 
 	<section class="userAccounts page">
 		<div class="logInBox">
-			<form class="logIn" method="post" action="/login">
+			<form class="logIn">
 				<h3>Log In</h3>
 				<p>Username </p><input class="username" type="text" name="username"><br>
 				<p>Password </p><input class="password" type="password" name="password"><br>
@@ -24,7 +24,7 @@
 			</form>
 		</div>
 		<div class="signUp">
-			<form class="createAccount" method="post" action="/signup">
+			<form class="createAccount">
 				<h3>Sign Up</h3>
 				<p>Username </p><input class="usernameCreate" type="text" name="username"><br>
 				<p>First Name </p><input class="firstName" type="text" name="firstName"><br>
