--- a/public/views/app.html
+++ b/public/views/app.html
@@ -12,9 +12,30 @@
 <header>
 	<h1>Political Hub</h1>
 	<form>
-    	<button class="logOut hidden" type="submit" value="Submit" name="logOut">Log Out</button>
+    	<button class="logOut dash settings hidden" type="submit" value="Submit" name="logOut">Log Out</button>
 	</form>
 </header>
+
+<section class="userAccounts page">
+	<div class="logInBox">
+		<form class="logIn">
+			<h3>Log In</h3>
+			<p>Username </p><input class="username" type="text" name="username"><br>
+			<p>Password </p><input class="password" type="password" name="password"><br>
+			<button type="submit" value="Submit">Sign In</button>
+		</form>
+	</div>
+	<div class="signUp">
+		<form class="createAccount">
+			<h3>Sign Up</h3>
+			<p>Username </p><input class="usernameCreate" type="text" name="username"><br>
+			<p>First Name </p><input class="firstName" type="text" name="firstName"><br>
+			<p>Last Name </p><input class="lastName" type="text" name="lastName"><br>
+			<p>Password </p><input class="passwordCreate" type="password" name="password"><br>
+			<button type="submit" value="Submit">Submit</button>
+		</form>
+	</div>
+</section>
 
 
 <section class="settings page hidden">
@@ -25,7 +46,7 @@
 		</div>
 
 		<div class="query">
-		<form class="location">
+		<form id="location" class="location">
 			<p>Address: </p><input class="address" type="text" name="street"><br>
 			<button type="submit" value="Submit">Submit</button>
 		</form>
@@ -51,59 +72,59 @@
 
 				<div class="vicePresident">
 					<p class="title">Vice President</p>
-					<p class="name">Name: <span></span></p>
-					<p class="party">Party: <span></span></p>
-					<p class="address">Address: <span></span></p>
-					<p class="phone">Phone: <span></span></p>
-					<p class="website">Website: <span></span></p>
+					<p class="name info">Name: <span></span></p>
+					<p class="party info">Party: <span></span></p>
+					<p class="address info">Address: <span></span></p>
+					<p class="phone info">Phone: <span></span></p>
+					<p class="website info">Website: <span></span></p>
 				</div>
 			</div>
 			<div class="state">
 				<p class="level">State</p>
 				<div class="senate1">
 					<p class="title">Senate</p>
-					<p class="name">Name: <span></span></p>
-					<p class="party">Party: <span></span></p>
-					<p class="address">Address: <span></span></p>
-					<p class="phone">Phone: <span></span></p>
-					<p class="website">Website: <span></span></p>
+					<p class="name info">Name: <span></span></p>
+					<p class="party info">Party: <span></span></p>
+					<p class="address info">Address: <span></span></p>
+					<p class="phone info">Phone: <span></span></p>
+					<p class="website info">Website: <span></span></p>
 				</div>
 
 				<div class="senate2">
 					<p class="title">Senate</p>
-					<p class="name">Name: <span></span></p>
-					<p class="party">Party: <span></span></p>
-					<p class="address">Address: <span></span></p>
-					<p class="phone">Phone: <span></span></p>
-					<p class="website">Website: <span></span></p>
+					<p class="name info">Name: <span></span></p>
+					<p class="party info">Party: <span></span></p>
+					<p class="address info">Address: <span></span></p>
+					<p class="phone info">Phone: <span></span></p>
+					<p class="website info">Website: <span></span></p>
 				</div>
 
 				<div class="governor">
 					<p class="title">Governor</p>
-					<p class="name">Name: <span></span></p>
-					<p class="party">Party: <span></span></p>
-					<p class="address">Address: <span></span></p>
-					<p class="phone">Phone: <span></span></p>
-					<p class="website">Website: <span></span></p>
+					<p class="name info">Name: <span></span></p>
+					<p class="party info">Party: <span></span></p>
+					<p class="address info">Address: <span></span></p>
+					<p class="phone info">Phone: <span></span></p>
+					<p class="website info">Website: <span></span></p>
 				</div>
 			</div>
 			<div class="city">
 				<p class="level">City</p>
 				<div class="mayor">
 					<p class="title">Mayor</p>
-					<p class="name">Name: <span></span></p>
-					<p class="party">Party: <span></span></p>
-					<p class="address">Address: <span></span></p>
-					<p class="phone">Phone: <span></span></p>
-					<p class="website">Website: <span></span></p>
+					<p class="name info">Name: <span></span></p>
+					<p class="party info">Party: <span></span></p>
+					<p class="address info">Address: <span></span></p>
+					<p class="phone info">Phone: <span></span></p>
+					<p class="website info">Website: <span></span></p>
 				</div>
 				<div class="cityClerk">
 					<p class="title">City Clerk</p>
-					<p class="name">Name: <span></span></p>
-					<p class="party">Party: <span></span></p>
-					<p class="address">Address: <span></span></p>
-					<p class="phone">Phone: <span></span></p>
-					<p class="website">Website: <span></span></p>
+					<p class="name info">Name: <span></span></p>
+					<p class="party info">Party: <span></span></p>
+					<p class="address info">Address: <span></span></p>
+					<p class="phone info">Phone: <span></span></p>
+					<p class="website info">Website: <span></span></p>
 				</div>
 			</div>
 
