--- a/public/views/app.html
+++ b/public/views/app.html
@@ -55,8 +55,13 @@
 	</section>
 
 	<section class="dash page hidden">
-		<div class="navSettings">
-			<p><a href="/#settings">Settings</a></p>
+		<div class="dashNav">
+			<div class="results-for">
+				<p><span></span></p>
+			</div>
+			<div class="navSettings">
+				<a href="/#settings">Settings</a>
+			</div>
 		</div>
 		<div class="display">
 			<div class="Country">
