added error message for bad location

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -138,6 +138,10 @@ button {
     text-align: center;
   }
 
+  .location > span {
+    color: red;
+  }
+
   .president, .vicePresident {
     display: inline-block;
     padding: 20px 100px;
