--- a/public/views/app.html
+++ b/public/views/app.html
@@ -48,6 +48,7 @@
 		<div class="query">
 		<form id="location" class="location">
 			<p>Address: </p><input class="address" type="text" name="street"><br>
+			<span></span>
 			<button type="submit" value="Submit">Submit</button>
 		</form>
 
