--- a/public/views/app.html
+++ b/public/views/app.html
@@ -17,6 +17,11 @@
 </header>
 
 <section class="userAccounts page">
+	<div class="about"> Welcome to my humble political app. <br />
+		When you sign up, you can enter your location <br />
+		and receive information on all of your political <br />
+		representatives on multiple levels. 
+	</div>
 	<div class="logInBox">
 		<form class="logIn">
 			<h3>Log In</h3>
@@ -61,7 +66,7 @@
 				<p><span></span></p>
 			</div>
 			<div class="navSettings">
-				<a href="/#settings">Settings</a>
+				<a href="/#settings">Change Location</a>
 			</div>
 		</div>
 		<div class="display">
