--- a/public/views/app.html
+++ b/public/views/app.html
@@ -25,18 +25,18 @@
 	<div class="logInBox">
 		<form class="logIn">
 			<h3>Log In</h3>
-			<p>Username </p><input class="username" type="text" name="username"><br>
-			<p>Password </p><input class="password" type="password" name="password"><br>
+			<label for="username1">Username </label><input id="username1" type="text" name="username"><br>
+			<label for="password1">Password </label><input id="password1" type="password" name="password"><br>
 			<button type="submit" value="Submit">Sign In</button>
 		</form>
 	</div>
 	<div class="signUp">
 		<form class="createAccount">
 			<h3>Sign Up</h3>
-			<p>Username </p><input class="usernameCreate" type="text" name="username"><br>
-			<p>First Name </p><input class="firstName" type="text" name="firstName"><br>
-			<p>Last Name </p><input class="lastName" type="text" name="lastName"><br>
-			<p>Password </p><input class="passwordCreate" type="password" name="password"><br>
+			<label for="username2">Username </label><input id="username2" type="text" name="username"><br>
+			<label for="firstname">First Name </label><input id="firstname" type="text" name="firstName"><br>
+			<label for="lastname">Last Name </label><input id="lastname" type="text" name="lastName"><br>
+			<label for="password2">Password </label><input id="password2" type="password" name="password"><br>
 			<button type="submit" value="Submit">Submit</button>
 		</form>
 	</div>
