added clickable links to politician websites

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -78,7 +78,7 @@
 					<p class="party info">Party: <span></span></p>
 					<p class="address info">Address: <span></span></p>
 					<p class="phone info">Phone: <span></span></p>
-					<p class="website info">Website: <span></span></p>
+					<p class="website info">Website: <a></a></p>
 				</div>
 
 				<div class="vicePresident">
@@ -87,7 +87,7 @@
 					<p class="party info">Party: <span></span></p>
 					<p class="address info">Address: <span></span></p>
 					<p class="phone info">Phone: <span></span></p>
-					<p class="website info">Website: <span></span></p>
+					<p class="website info">Website: <a></a></p>
 				</div>
 			</div>
 			<div class="state">
@@ -98,7 +98,7 @@
 					<p class="party info">Party: <span></span></p>
 					<p class="address info">Address: <span></span></p>
 					<p class="phone info">Phone: <span></span></p>
-					<p class="website info">Website: <span></span></p>
+					<p class="website info">Website: <a></a></p>
 				</div>
 
 				<div class="senate2">
@@ -107,7 +107,7 @@
 					<p class="party info">Party: <span></span></p>
 					<p class="address info">Address: <span></span></p>
 					<p class="phone info">Phone: <span></span></p>
-					<p class="website info">Website: <span></span></p>
+					<p class="website info">Website: <a></a></p>
 				</div>
 
 				<div class="governor">
@@ -116,7 +116,7 @@
 					<p class="party info">Party: <span></span></p>
 					<p class="address info">Address: <span></span></p>
 					<p class="phone info">Phone: <span></span></p>
-					<p class="website info">Website: <span></span></p>
+					<p class="website info">Website: <a></a></p>
 				</div>
 			</div>
 			<div class="city">
@@ -127,7 +127,7 @@
 					<p class="party info">Party: <span></span></p>
 					<p class="address info">Address: <span></span></p>
 					<p class="phone info">Phone: <span></span></p>
-					<p class="website info">Website: <span></span></p>
+					<p class="website info">Website: <a></a></p>
 				</div>
 				<div class="cityClerk">
 					<p class="title">City Clerk</p>
@@ -135,7 +135,7 @@
 					<p class="party info">Party: <span></span></p>
 					<p class="address info">Address: <span></span></p>
 					<p class="phone info">Phone: <span></span></p>
-					<p class="website info">Website: <span></span></p>
+					<p class="website info">Website: <a></a></p>
 				</div>
 			</div>
 
