--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,16 +1,45 @@
 * {
 	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  padding: 2px;
+  height: 100%;
+  width: 100%;
+  background-image: url("../assets/images/flag-USA.png");
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 header {
   display: block;
   text-align: center;
+  background-color: #ecf0f1;
+  border-radius: 15px;
+  opacity: 0.9;
+  margin: 2px 0 2px 0;
+}
+
+.userAccounts {
+  background-color: rgba(153, 153, 153, 0.9);
+  padding: 13px;
+  border-radius: 25px;
 }
 
 h1 {
   margin: 2px 0;
   width: 65%;
   display: inline-block;
+  color: #8A3324;
+  text-shadow: -2px 2px 2px black;
 }
 
 header > form {
@@ -60,31 +89,52 @@ h3 {
 }
 
 .level {
+  background-color: darkgray;
+  border-radius: 5px;
   text-align: center;
-  font-size: 25px;
+  font-size: 30px;
   font-weight: bold;
   text-decoration: underline;
 }
 
 .title {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
 }
 
 .dashNav {
   display:block;
+  padding: 10px;
+  text-align: center;
+  font-size: 16px;
+  background-color: azure;
+  border-radius: 10px;
+  opacity: 0.7;
+}
+
+.display {
+  margin-top: 2px;
+  font-size: 16px;
+}
+
+.display > div > div {
+  padding: 13px;
+  margin: 2px;
+  background-color: lightslategray;
+  border-radius: 10px;
+  opacity: 0.98;
 }
 
 .results-for {
-  text-align: left;
-  display: inline-block;
+  height: 100%;
   width: 49%;
+  display: inline-block;
 }
 
 .navSettings {
+  height: 100%;
   width: 49%;
   display: inline-block;
-  text-align: right;
 }
 
 .navSettings > a {
@@ -138,16 +188,8 @@ button {
   		height: 30px;
   }
 
-  p {
-  	font-size: 20px;
-  }
-
   button {
   	font-size: 14px;
-  }
-
-  .navSettings > p {
-  text-align: right;
   }
 
   .display {
