--- a/public/views/app.html
+++ b/public/views/app.html
@@ -55,7 +55,7 @@
 	<form id="location" class="location">
 		<p>Address: </p><input class="address" type="text" name="street"><br>
 		<span></span>
-		<button type="submit" value="Submit">Submit</button>
+		<button type="submit" value="Submit">Enter Location</button>
 	</form>
 
 	</div>
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	<div class="display">
-		<div class="Country">
+		<div class="country">
 			<p class="level">Country</p>
 			<div class="president">
 				<p class="title">President</p>
