--- a/public/views/app.html
+++ b/public/views/app.html
@@ -30,6 +30,7 @@
 			<label for="password1">Password </label><input id="password1" type="password" name="password" required><br>
 			<button type="submit" value="Submit">Sign In</button>
 		</form>
+		<span></span>
 	</div>
 	<div class="signUp">
 		<form class="createAccount">
@@ -40,6 +41,7 @@
 			<label for="password2">Password </label><input id="password2" type="password" name="password" required><br>
 			<button type="submit" value="Submit">Submit</button>
 		</form>
+		<span></span>
 	</div>
 </section>
 
