made suggested style changes

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -3,10 +3,10 @@
 
 <head>
 	<title>Politics For Dummies</title>
-
 	<link rel="stylesheet" type="text/css" href="css/app.css"/>
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Marmelad" rel="stylesheet">
 </head>
 <body>
 
@@ -18,9 +18,9 @@
 </header>
 
 <section class="userAccounts page">
-	<div class="about"> Welcome to my humble political app. <br />
-		When you sign up, you can enter your location <br />
-		and receive information on all of your political <br />
+	<div class="about"> Welcome to my humble political app.
+		When you sign up, you can enter your location
+		and receive information on all of your political
 		representatives on multiple levels. 
 	</div>
 	<div class="logInBox">
