--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,13 +17,13 @@ body {
   background-attachment: fixed;
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  font-family: 'Open Sans', sans-serif;
 }
 
 header {
   display: block;
   text-align: center;
   background-color: rgba(236, 240, 241, 9);
-  border-radius: 15px;
   margin: 2px 0 2px 0;
 }
 
@@ -117,7 +117,6 @@ button:active {
 .userAccounts {
   background-color: rgba(153, 153, 153, 0.8);
   padding: 13px;
-  border-radius: 25px;
 }
 
 h1 {
@@ -125,7 +124,6 @@ h1 {
   width: 65%;
   display: inline-block;
   color: #8A3324;
-  text-shadow: -2px 2px 6px black;
 }
 
 header > form {
@@ -172,7 +170,6 @@ form > button {
 .settings {
   background-color: rgba(153, 153, 153, 0.8);
   padding: 13px;
-  border-radius: 25px;
 }
 
 .bio {
@@ -186,11 +183,9 @@ h3 {
 
 .level {
   background-color: darkgray;
-  border-radius: 5px;
   text-align: center;
   font-size: 30px;
   font-weight: bold;
-  text-decoration: underline;
 }
 
 .title {
@@ -204,7 +199,6 @@ h3 {
   text-align: center;
   font-size: 16px;
   background-color: azure;
-  border-radius: 10px;
   opacity: 0.7;
 }
 
@@ -219,6 +213,7 @@ h3 {
   background-color: lightslategray;
   border-radius: 10px;
   opacity: 0.98;
+  font-family: 'Marmelad', sans-serif;
 }
 
 .country, .state, .city {
@@ -237,6 +232,10 @@ h3 {
   display: inline-block;
 }
 
+a {
+  color: #8A3324;
+}
+
 .navSettings > a {
   margin-right: 10px;
 }
@@ -244,6 +243,7 @@ h3 {
 input {
 	width: 250px;
 	height: 30px;
+  background-color: rgba(236, 240, 241, 9);
 }
 
 button {
